<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="network_error">Network error</string>
    <string name="temperature">25°C</string>
    <string name="weather_condition">Sunny</string>
    <string name="min_temperature">Min temperature</string>
    <string name="max_temperature">Max temperature</string>
    <string name="time_zone">time zone</string>
    <string name="max">Max:</string>
    <string name="min">Min:</string>
    <string name="temperature_text">Temperature:</string>
    <string name="apparent_temperature">Apparent Temperature:</string>
</resources>